@@ -1,3 +1,13 @@
+Wed Nov 27 16:22:09 2002  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/syslog/syslog.c: Fix a problem where Syslog#ident was not
+	  marked and could thus be GC'd.
+
+	* ext/syslog/test.rb: Switch from RUnit to Test::Unit.
+
+	* ext/syslog/test.rb: The output format of inspect() is slightly
+	  altered.
+
 Fri Nov 22 19:30:17 2002  Akinori MUSHA  <knu@iDaemons.org>
 
 	* instruby.rb: Install batch files on Windows. [Submitted by usa]
